src/objects/AccountingTransaction__c.object
<CustomObject>
    <fields>
        <fullName>GLEntity__c</fullName>
        <formula>investment__r.glEntity__c</formula>
        <label>GL Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountingIntegrationJob__c</fullName>
        <label>Accounting Integration Job</label>
        <referenceTo>AccountingIntegrationJob__c</referenceTo>
        <relationshipLabel>Accounting Transactions</relationshipLabel>
        <relationshipName>AccountingTransactions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>class__c</fullName>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>code__c</fullName>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>costProceeds__c</fullName>
        <label>Cost/Proceeds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>creditAccount__c</fullName>
        <label>Credit Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>debitAccount__c</fullName>
        <label>Debit Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>entity__c</fullName>
        <label>Entity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>investmentId__c</fullName>
        <formula>investment__r.investmentID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Investment Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>investmentTypeDescription__c</fullName>
        <label>Investment Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>investment__c</fullName>
        <label>Investment</label>
        <referenceTo>AccountingInvestment__c</referenceTo>
        <relationshipLabel>Accounting Transactions</relationshipLabel>
        <relationshipName>AccountingTransactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>reconciliationTypeLock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should be set to true when user manually updates Reconciliation Type and used to prevent import records from overwriting user&apos;s manual selection.</description>
        <label>Reconciliation Type Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>reconciliationType__c</fullName>
        <label>Reconciliation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cost</fullName>
                    <default>true</default>
                    <label>Cost</label>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>settleDate__c</fullName>
        <label>Settle Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tradeDate__c</fullName>
        <label>Trade Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>transactionDescription__c</fullName>
        <label>TXN Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transactionNumber__c</fullName>
        <externalId>true</externalId>
        <label>TXN No</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>transactionStatus__c</fullName>
        <label>TXN Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>updateFromImport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System variable set during import routine temporarily to determine when an update is being triggered by the import process vs. a manual update by a user in the interface.</description>
        <label>Update from Import</label>
        <type>Checkbox</type>
    </fields>
    <label>Accounting Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>tradeDate__c</columns>
        <columns>settleDate__c</columns>
        <columns>transactionNumber__c</columns>
        <columns>transactionDescription__c</columns>
        <columns>description__c</columns>
        <columns>transactionStatus__c</columns>
        <columns>investmentId__c</columns>
        <columns>investmentTypeDescription__c</columns>
        <columns>costProceeds__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AT-{0000000000}</displayFormat>
        <label>Accounting Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>